Get user pagination, update user, and delete user
