# app/Http/Resources/UserResource.php
@@ -7,6 +7,18 @@ use Illuminate\Http\Resources\Json\JsonResource;
 
 class UserResource extends JsonResource
 {
+    /* public static function collection($resource)
+    {
+        return parent::collection($resource)->additional([
+            'meta' => [
+                'current_page' => $resource->currentPage(),
+                'last_page' => $resource->lastPage(),
+                'per_page' => $resource->perPage(),
+                'total' => $resource->total(),
+            ]
+        ]);
+    } */
+
     public function toArray(Request $request): array
     {
         return [
@@ -14,6 +26,7 @@ class UserResource extends JsonResource
             'name' => $this->name,
             'email' => $this->email,
             'role' => $this->role,
+            'phone' => $this->phone,
             'email_verified_at' => $this->email_verified_at,
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at,
